# Eishougi

./: .env.example  .gitignore  README.md  app-release.apk.idsig  build-and-install-apk.ps1  build-and-install-apk.sh  index.html  package-lock.json  package.json  restyle.py  test_ollama.js  test_ollama_ctx.js  tsconfig.json  vite.config.ts
docs/workflows/: Anima+Preview3_Txt2Img_Example.json
scripts/: clean_characters.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: data.rs  favorites.rs  files.rs  history.rs  images.rs  library.rs  mcp.rs  mod.rs  prompts.rs  styles.rs  workflows.rs
src-tauri/src/db/: connection.rs  init.rs  migrations.rs  mod.rs  models.rs
src/assets/: default_workflow.json
src/components/agent/: AgentPanel.tsx  MobileAgentModal.tsx
src/components/generate/: StyleSelector.tsx
src/components/layout/: AgentPanel.tsx  BottomNav.tsx  DesktopLayout.tsx  MobileBottomNav.tsx  MobileLayout.tsx  MobileTopBar.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TopBar.tsx
src/data/: styles.ts
src/hooks/: useAgent.ts  useDevice.ts
src/lib/: constants.tsx
src/pages/: Dashboard.tsx  Settings.tsx  index.tsx
src/services/: aiService.ts  comfyService.ts  llmService.ts
src/stores/: agentStore.ts  favoriteStore.ts  libraryStore.ts  modelStore.ts  navStore.ts  promptStore.ts  queueStore.ts  settingsStore.ts  themeStore.ts  workflowStore.ts
src/types/: index.ts
src/utils/: download.ts
(+18 files in other folders)
